# nfticket

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE-DECISIONS.md  AUDIT-REPORT.md  CHANGELOG.md  CODEBASE-REPORT.md  CODEX-EVALUATION.md  CONTRIBUTING.md  DEPLOYMENT-STATUS.md  IMPLEMENTATION-ROADMAP.md  LICENSE  MOBILE-QUICKSTART.md  NFTICKET_PLAN.md  PUBLISHING-GUIDE.md  README.md  TEST-RESULTS.md  TESTING-CHECKLIST.md  TODO.md  deploy.sh  package.json  playwright.config.ts  setup.sh
.github/workflows/: ci.yml
anchor-program/: Anchor.toml  Cargo.toml
anchor-program/src/: lib.rs
anchor-program/tests/: nfticket.ts
apps/app/: Dockerfile  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
apps/provider/: Dockerfile  package.json  tsconfig.tsbuildinfo
apps/shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
archive/: README.md
archive/frontend-legacy/: package.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTERACTION_INTERFACE.md
e2e/: buying-tickets.spec.ts  comprehensive.spec.ts  minting-tickets.spec.ts  selling-tickets.spec.ts  test-simple.js  visual.spec.ts  wallet-connection.spec.ts
lib/: auth.ts  blockchain.ts  config.ts  domain.ts  fulfillment.ts  indexer.ts  jobs.ts  kyc.ts  marketplace.ts  minting.ts  operations.ts  payments.ts  reconciliation.ts  repository.ts  transfers.ts
playwright-report/: index.html
prisma/: schema.prisma
tests/: apiHandlers.test.ts  domain.test.ts  package.json  payment.test.ts  scannerValidation.test.ts  secureAuth.test.ts  setup.ts  vitest.config.ts
(+71 files in other folders)
