[package]
name = "nfticket"
version = "0.1.0"
description = "NFT-based ticketing system on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nfticket"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "~1.17.0"
